--- a/index.html
+++ b/index.html
@@ -1,12 +1,72 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="/css/bootstrap.min.css">
+    <!-- Estilos personalizados -->
+    <link rel="stylesheet" href="/css/estilos.css">
+    <!-- Place your kit's code here -->
+    <script src="https://kit.fontawesome.com/70ed03d184.js" crossorigin="anonymous"></script>
+
+    <title>APP Commerce</title>
 </head>
 <body>
-    
+    <nav class="navbar navbar-expand-sm navbar-dark bg-dark p-0">
+        <div class="container">
+            <a href="index.html" class="navbar-brand">App Commerce</a>
+        </div>
+    </nav>
+
+    <img src="img/logo_login.png" alt="" class="img-fluid mx-auto d-block my-5">
+
+    <!-- Login -->
+    <section id="login">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6 mx-auto">
+                    <div class="card">
+                        <div class="card-header">
+                            <h4 class="text-center">Acceso Usuarios</h4>
+                        </div>
+                        <div class="card-body">
+                            <form action="index.html">
+                                <div class="form-group">
+                                    <label for="email">Email</label>
+                                    <input type="email" class="form-control" placeholder="Ingresar email">
+                                </div>
+                                <div class="form-group">
+                                    <label for="password">Password</label>
+                                    <input type="password" class="form-control" placeholder="Ingrese su contraseña">
+                                </div>
+                                <button type="submit" class="btn btn-primary w-100"><i class="fas fa-user"></i> Acceder</button>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Footer -->
+    <footer id="main-footer" class="bg-dark text-white mt-5 p-5">
+        <div class="container">
+            <div class="row">
+                <div class="col">
+                    <p class="lead text-center">
+                        2019 - Todos los derechos &copy;
+                        <span>App Comerce</span>
+                    </p>
+                </div>
+            </div>
+        </div>
+    </footer>
+
+    <!-- Option 1: jQuery and Bootstrap Bundle -->
+    <script src="js/jquery-3.6.0.min.js"></script>
+    <script src="/js/bootstrap.min.js"></script>
 </body>
 </html>
