feat: Se agrego menu principal y administración

--- a/panel.html
+++ b/panel.html
@@ -11,6 +11,10 @@
     <link rel="stylesheet" href="/css/estilos.css">
     <!-- Place your kit's code here -->
     <script src="https://kit.fontawesome.com/70ed03d184.js" crossorigin="anonymous"></script>
+    <!-- Ubuntu - Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300&display=swap" rel="stylesheet">
 
     <title>APP Commerce</title>
 </head>
@@ -101,8 +105,68 @@
         </div>
     </nav>
 
-    
-    
+    <!-- Layout principal -->
+    <div class="container-fluid mt-5">
+        <div class="row">
+            <!-- Layout de 3 columnas -->
+            <div class="col-sm-12 col-md-3">
+                <div class="card">
+                    <div class="card-header bg-dark text-white">
+                        <h4><i class="fas fa-align-justify"></i> Menú Principal</h4>
+                    </div>
+                    <div class="card-body">
+                        <ul class="list-group">
+                            <li class="list-group-item list-group-item-secundary d-flex justify-content-between align-items-center">
+                                <a class="text-dark" href="categorias.html">Categorías</a>
+                                <span class="badge badge-primary badge-pill">10</span>
+                            </li>
+                            <li class="list-group-item list-group-item-secundary d-flex justify-content-between align-items-center">
+                                <a class="text-dark" href="productos.html">Productos</a>
+                                <span class="badge badge-primary badge-pill">8</span>
+                            </li>
+                            <li class="list-group-item list-group-item-secundary d-flex justify-content-between align-items-center">
+                                <a class="text-dark" href="categorias.html">Inventario</a>
+                                <span class="badge badge-primary badge-pill">20</span>
+                            </li>
+                            <li class="list-group-item list-group-item-secundary d-flex justify-content-between align-items-center">
+                                <a class="text-dark" href="categorias.html">Pedido</a>
+                                <span class="badge badge-primary badge-pill">14</span>
+                            </li>
+                            <li class="list-group-item list-group-item-secundary d-flex justify-content-between align-items-center">
+                                <a class="text-dark" href="categorias.html">Cupones</a>
+                                <span class="badge badge-primary badge-pill">15</span>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="card mt-5">
+                    <div class="card-header bg-dark text-white">
+                        <h4><i class="fas fa-align-justify"></i> Administración</h4>
+                    </div>
+                    <div class="card-body">
+                        <ul class="list-group">
+                            <li class="list-group-item list-group-item-secundary d-flex justify-content-between align-items-center">
+                                <a class="text-dark" href="#">Usuarios</a>
+                            </li>
+                            <li class="list-group-item list-group-item-secundary d-flex justify-content-between align-items-center">
+                                <a class="text-dark" href="#">Configuraciones</a>
+                            </li>
+                            <li class="list-group-item list-group-item-secundary d-flex justify-content-between align-items-center">
+                                <a class="text-dark" href="#">Roles</a>
+                            </li>
+                            <li class="list-group-item list-group-item-secundary d-flex justify-content-between align-items-center">
+                                <a class="text-dark" href="#">Sistema</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <!-- Layout de 9 columnas -->
+            <div class="col-sm-12 col-md-9">
+
+            </div>
+        </div>
+    </div>
 
     <!-- Footer -->
     <footer id="main-footer" class="bg-dark text-white mt-5 p-5">
