--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
     <link rel="stylesheet" href="/css/estilos.css">
     <!-- Place your kit's code here -->
     <script src="https://kit.fontawesome.com/70ed03d184.js" crossorigin="anonymous"></script>
+    <!-- Ubuntu - Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300&display=swap" rel="stylesheet">
 
     <title>APP Commerce</title>
 </head>
