--- a/panel.html
+++ b/panel.html
@@ -163,7 +163,32 @@
             </div>
             <!-- Layout de 9 columnas -->
             <div class="col-sm-12 col-md-9">
+                <div class="card">
+                    <div class="card-header bg-dark text-white">
+                        <h4><i class="fas fa-shopping-cart"></i> Panel de Control/Ecommerce</h4>
+                    </div>
+                    <div class="card-body">
+                        <div class="d-flex justify-content-around row-h1">
+                            <div class="col-sm-12 col-md-3 card py-3 bg-danger text-center text-white">
+                                <i class="fas fa-shopping-cart" style="font-size: 4rem;"></i>
+                                <h4>Ventas</h4>
+                                <p>100 Nuevos pedidos</p>
+                            </div>
 
+                            <div class="col-sm-12 col-md-3 card py-3 bg-warning text-center text-white">
+                                <i class="fas fa-user" style="font-size: 4rem;"></i>
+                                <h4>Clientes</h4>
+                                <p>50 Nuevos Clientes</p>
+                            </div>
+
+                            <div class="col-sm-12 col-md-3 card py-3 bg-success text-center text-white">
+                                <i class="fas fa-table" style="font-size: 4rem;"></i>
+                                <h4>Productos</h4>
+                                <p>50 Nuevos Productos</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
