feat: Se agrego tabla y paginación

--- a/panel.html
+++ b/panel.html
@@ -189,6 +189,73 @@
                         </div>
                     </div>
                 </div>
+
+                <!-- Últimos productos -->
+                <div class="card mt-5">
+                    <div class="card-header bg-dark text-white">
+                        <h4><i class="fas-fatable"></i>Últimos Productos</h4>
+                    </div>
+                    <div class="card-body">
+                        <table class="table table-striped">
+                            <t-head>
+                                <tr>
+                                    <th>#</th>
+                                    <th>Producto</th>
+                                    <th>Talla</th>
+                                    <th>Precio</th>
+                                </tr>
+                            </t-head>
+                            <t-body>
+                                <tr>
+                                    <td>1</td>
+                                    <td>Camisa 1</td>
+                                    <td>X</td>
+                                    <td>$ 40.000</td>
+                                </tr>
+                                <tr>
+                                    <td>2</td>
+                                    <td>Camisa 2</td>
+                                    <td>L</td>
+                                    <td>$ 52.000</td>
+                                </tr>
+                                <tr>
+                                    <td>3</td>
+                                    <td>Camisa 3</td>
+                                    <td>M</td>
+                                    <td>$ 60.000</td>
+                                </tr>
+                            </t-body>
+                        </table>
+                    </div>
+                </div>
+
+                <!-- Paginación -->
+                <div class="mt-3">
+                    <nav aria-label="Page navigation">
+                        <ul class="pagination">
+                            <li class="page-item">
+                                <a href="#" class="page-link" aria-label="Previous">
+                                    <span aria-hidden="true">&laquo;</span>
+                                </a>
+                            </li>
+                            <li class="page-item active">
+                                <a href="#" class="page-link">1</a>
+                            </li>
+                            <li class="page-item">
+                                <a href="#" class="page-link">2</a>
+                            </li>
+                            <li class="page-item">
+                                <a href="#" class="page-link">3</a>
+                            </li>
+                            <li class="page-item">
+                                <a href="#" class="page-link" aria-label="Next">
+                                    <span aria-hidden="true">&raquo;</span>
+                                </a>
+                            </li>
+                        </ul>
+                    </nav>
+                </div>
+                
             </div>
         </div>
     </div>
