--- a/productos.html
+++ b/productos.html
@@ -125,15 +125,15 @@
                                 <span class="badge badge-primary badge-pill">8</span>
                             </li>
                             <li class="list-group-item list-group-item-secundary d-flex justify-content-between align-items-center">
-                                <a class="text-dark" href="categorias.html">Inventario</a>
+                                <a class="text-dark" href="inventario.html">Inventario</a>
                                 <span class="badge badge-primary badge-pill">20</span>
                             </li>
                             <li class="list-group-item list-group-item-secundary d-flex justify-content-between align-items-center">
-                                <a class="text-dark" href="categorias.html">Pedido</a>
+                                <a class="text-dark" href="pedidos.html">Pedidos</a>
                                 <span class="badge badge-primary badge-pill">14</span>
                             </li>
                             <li class="list-group-item list-group-item-secundary d-flex justify-content-between align-items-center">
-                                <a class="text-dark" href="categorias.html">Cupones</a>
+                                <a class="text-dark" href="cuponess.html">Cupones</a>
                                 <span class="badge badge-primary badge-pill">15</span>
                             </li>
                         </ul>
@@ -329,7 +329,7 @@
         </div>
     </footer>
 
-    <!-- Modal Categoría -->
+    <!-- Modal Producto -->
     <div class="modal fade" id="agregarProducto" tabindex="-1" role="dialog" aria-labelledby="EjemploModal" aria-hidden="true">
         <div class="modal-dialog" role="document">
             <div class="modal-content">
