--- a/categorias.html
+++ b/categorias.html
@@ -125,15 +125,15 @@
                                 <span class="badge badge-primary badge-pill">8</span>
                             </li>
                             <li class="list-group-item list-group-item-secundary d-flex justify-content-between align-items-center">
-                                <a class="text-dark" href="categorias.html">Inventario</a>
+                                <a class="text-dark" href="inventario.html">Inventario</a>
                                 <span class="badge badge-primary badge-pill">20</span>
                             </li>
                             <li class="list-group-item list-group-item-secundary d-flex justify-content-between align-items-center">
-                                <a class="text-dark" href="categorias.html">Pedido</a>
+                                <a class="text-dark" href="pedidos.html">Pedidos</a>
                                 <span class="badge badge-primary badge-pill">14</span>
                             </li>
                             <li class="list-group-item list-group-item-secundary d-flex justify-content-between align-items-center">
-                                <a class="text-dark" href="categorias.html">Cupones</a>
+                                <a class="text-dark" href="cupones.html">Cupones</a>
                                 <span class="badge badge-primary badge-pill">15</span>
                             </li>
                         </ul>
