--- a/cupones.html
+++ b/cupones.html
@@ -132,8 +132,8 @@
                                 <a class="text-dark" href="pedidos.html">Pedidos</a>
                                 <span class="badge badge-primary badge-pill">14</span>
                             </li>
-                            <li class="list-group-item list-group-item-secundary d-flex justify-content-between align-items-center">
-                                <a class="text-dark" href="cupones.html">Cupones</a>
+                            <li class="list-group-item list-group-item-secundary d-flex justify-content-between align-items-center active">
+                                <a class="text-white" href="cupones.html">Cupones</a>
                                 <span class="badge badge-primary badge-pill">15</span>
                             </li>
                         </ul>
@@ -163,29 +163,25 @@
             </div>
             <!-- Layout de 9 columnas -->
             <div class="col-sm-12 col-md-9">
-                <div class="card">
-                    <div class="card-header bg-dark text-white">
-                        <h4><i class="fas fa-shopping-cart"></i> Panel de Control/Ecommerce</h4>
-                    </div>
+                <div class="row">
                     <div class="card-body">
-                        <div class="d-flex justify-content-around row-h1">
-                            <div class="col-sm-12 col-md-3 card py-3 bg-danger text-center text-white">
-                                <i class="fas fa-shopping-cart" style="font-size: 4rem;"></i>
-                                <h4>Ventas</h4>
-                                <p>100 Nuevos pedidos</p>
-                            </div>
+                        <nav aria-label="breadcrumb">
+                            <ol class="breadcrumb">
+                                <li class="breadcrumb-item">
+                                    <a href="panel.html">Inicio</a>
+                                </li>
+                                <li class="breadcrumb-item" aria-current="page">Cupones</li>
+                            </ol>
+                        </nav>
+                    </div>
+                </div>
 
-                            <div class="col-sm-12 col-md-3 card py-3 bg-warning text-center text-white">
-                                <i class="fas fa-user" style="font-size: 4rem;"></i>
-                                <h4>Clientes</h4>
-                                <p>50 Nuevos Clientes</p>
-                            </div>
-
-                            <div class="col-sm-12 col-md-3 card py-3 bg-success text-center text-white">
-                                <i class="fas fa-table" style="font-size: 4rem;"></i>
-                                <h4>Productos</h4>
-                                <p>50 Nuevos Productos</p>
-                            </div>
+                <div class="row">
+                    <div class="card-body">
+                        <div class="col-sm-12 text-right">
+                            <button class="btn btn-primary ml-auto" data-toggle="modal" data-target="#agregarCupon">
+                                <i class="fas fa-plus"></i> Nuevo cupón
+                            </button>
                         </div>
                     </div>
                 </div>
@@ -193,36 +189,100 @@
                 <!-- Últimos productos -->
                 <div class="card mt-5">
                     <div class="card-header bg-dark text-white">
-                        <h4><i class="fas-fatable"></i>Últimos Productos</h4>
+                        <h4><i class="fas-fatable"></i> Cupones</h4>
                     </div>
                     <div class="card-body">
                         <table class="table table-striped">
                             <t-head>
                                 <tr>
                                     <th>#</th>
-                                    <th>Producto</th>
-                                    <th>Talla</th>
-                                    <th>Precio</th>
+                                    <th>Cupón</th>
+                                    <th>Fecha Inicial</th>
+                                    <th>Fecha Final</th>
+                                    <th>Descuento</th>
+                                    <th>Acciones</th>
                                 </tr>
                             </t-head>
                             <t-body>
                                 <tr>
                                     <td>1</td>
-                                    <td>Camisa 1</td>
-                                    <td>X</td>
-                                    <td>$ 40.000</td>
+                                    <td>XL35689</td>
+                                    <td>03/05/2019</td>
+                                    <td>30/05/2019</td>
+                                    <td>20%</td>
+                                    <td style="width: 150px;">
+                                        <div class="btn-group" role="group">
+                                            <a href="" class="btn btn-primary text-white">
+                                                <i class="fas fa-edit"></i>
+                                            </a>
+                                            <a href="" class="btn btn-success text-white">
+                                                <i class="fas fa-list-alt"></i>
+                                            </a>
+                                            <a href="" class="btn btn-danger text-white">
+                                                <i class="fas fa-trash-alt"></i>
+                                            </a>
+                                        </div>
+                                    </td>
                                 </tr>
                                 <tr>
-                                    <td>2</td>
-                                    <td>Camisa 2</td>
-                                    <td>L</td>
-                                    <td>$ 52.000</td>
+                                    <td>1</td>
+                                    <td>XL35689</td>
+                                    <td>03/05/2019</td>
+                                    <td>30/05/2019</td>
+                                    <td>20%</td>
+                                    <td style="width: 150px;">
+                                        <div class="btn-group" role="group">
+                                            <a href="" class="btn btn-primary text-white">
+                                                <i class="fas fa-edit"></i>
+                                            </a>
+                                            <a href="" class="btn btn-success text-white">
+                                                <i class="fas fa-list-alt"></i>
+                                            </a>
+                                            <a href="" class="btn btn-danger text-white">
+                                                <i class="fas fa-trash-alt"></i>
+                                            </a>
+                                        </div>
+                                    </td>
                                 </tr>
                                 <tr>
-                                    <td>3</td>
-                                    <td>Camisa 3</td>
-                                    <td>M</td>
-                                    <td>$ 60.000</td>
+                                    <td>1</td>
+                                    <td>XL35689</td>
+                                    <td>03/05/2019</td>
+                                    <td>30/05/2019</td>
+                                    <td>20%</td>
+                                    <td style="width: 150px;">
+                                        <div class="btn-group" role="group">
+                                            <a href="" class="btn btn-primary text-white">
+                                                <i class="fas fa-edit"></i>
+                                            </a>
+                                            <a href="" class="btn btn-success text-white">
+                                                <i class="fas fa-list-alt"></i>
+                                            </a>
+                                            <a href="" class="btn btn-danger text-white">
+                                                <i class="fas fa-trash-alt"></i>
+                                            </a>
+                                        </div>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>1</td>
+                                    <td>XL35689</td>
+                                    <td>03/05/2019</td>
+                                    <td>30/05/2019</td>
+                                    <td>20%</td>
+                                    <td style="width: 150px;">
+                                        <div class="btn-group" role="group">
+                                            <a href="" class="btn btn-primary text-white">
+                                                <i class="fas fa-edit"></i>
+                                            </a>
+                                            <a href="" class="btn btn-success text-white">
+                                                <i class="fas fa-list-alt"></i>
+                                            </a>
+                                            <a href="" class="btn btn-danger text-white">
+                                                <i class="fas fa-trash-alt"></i>
+                                            </a>
+                                        </div>
+                                    </td>
                                 </tr>
                             </t-body>
                         </table>
@@ -274,8 +334,57 @@
         </div>
     </footer>
 
+    <!-- Modal Cupón -->
+    <div class="modal fade" id="agregarCupon" tabindex="-1" role="dialog" aria-labelledby="EjemploModal" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="EjemploModal">
+                        Ingresar un nuevo Cupón
+                    </h5>
+                    <button class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <form>
+                        <div class="form-group">
+                            <label for="cupon">Cupón</label>
+                            <input type="text" class="form-control" placeholder="Ingresa el codigo del cupón">
+                        </div>
+                        <div class="form-group">
+                            <label for="fecha_inicial">Fecha Inicial</label>
+                            <input type="date" class="form-control" placeholder="Ingrese fecha inicial">
+                        </div>
+                        <div class="form-group">
+                            <label for="fecha_final">Fecha Final</label>
+                            <input type="date" class="form-control" placeholder="Ingrese fecha final">
+                        </div>
+                        <div class="form-group">
+                            <label for="descripcion">Descripción</label>
+                            <input type="number" class="form-control" placeholder="Ingrese el descuento">
+                        </div>
+                    </form>
+                </div>
+                <div class="modal-footer">
+                    <button class="btn btn-secondary" data-dismiss="modal">
+                        Cerrar
+                    </button>
+                    <button class="btn btn-primary">
+                        <i class="fas fa-save"></i> Guardar
+                    </button>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <!-- Option 1: jQuery and Bootstrap Bundle -->
     <script src="js/jquery-3.6.0.min.js"></script>
     <script src="/js/bootstrap.min.js"></script>
+    <!-- CKEditor 4 -->
+    <script src="//cdn.ckeditor.com/4.16.1/standard/ckeditor.js"></script>
+    <script>
+        CKEDITOR.replace("editor1");
+    </script>
 </body>
 </html>
